gap, justify content, flex wrap, flex dirction

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
         <div class="child"> Child - 4</div>
         <div class="child"> Child - 5</div>
         <div class="child"> Child - 6</div>
+        <div class="child"> Child - 7</div>
+        <div class="child"> Child - 8</div>
+        <div class="child"> Child - 9</div>
+        <div class="child"> Child - 10</div>
+        <div class="child"> Child - 11</div>
+        <div class="child"> Child - 12</div>
+        <div class="child"> Child - 13</div>
+        <div class="child"> Child - 14</div>
+        <div class="child"> Child - 15</div>
+        <div class="child"> Child - 16</div>
+        <div class="child"> Child - 17</div>
+        <div class="child"> Child - 18</div>
+        <div class="child"> Child - 19</div>
+        <div class="child"> Child - 20</div>
     </section>
 </body>
 </html>
